# Parametric-Shoe-Tree

./: .gitignore  README.md  last_0027-A.stl  last_0029-A.stl  mesh_tools.py  my_shoe_tree.stl  my_shoe_tree2.stl  my_shoe_tree_bottom.stl  my_shoe_tree_clean.stl  my_shoe_tree_clip_half_a.stl  my_shoe_tree_clip_half_b.stl  my_shoe_tree_half_a.stl  my_shoe_tree_half_b.stl  my_shoe_tree_top.stl  pyproject.toml  requirements.txt  split_mesh.py
James-Code/last-generator/: .gitignore  README.md  pyproject.toml
James-Code/last-generator/scripts/: smoke_all_scans.py
James-Code/last-generator/src/last_generator/: align.py  cli.py  io.py  refine.py  template.py  viz.py  warp.py
James-Code/last-generator/tests/: test_cli.py  test_measure.py  test_warp.py
scripts/: smoke_all_scans.py
src/: extract_feature.py
src/custom_shoe_tree/: cli.py  finalize.py  io.py  measure.py  refine.py  split.py  template.py  template_landmarks.json  viz.py  warp.py
src/last_generator/: finalize.py  measure.py
tests/: test_align.py  test_cli.py  test_finalize.py  test_io.py  test_measure.py  test_refine.py  test_split.py  test_template.py  test_viz.py  test_warp.py  test_webapp_backend.py
webapp/: README.md
webapp/backend/: main.py  pipeline_runner.py
webapp/frontend/: index.html  package-lock.json  package.json
webapp/frontend/src/: App.css  App.jsx
webapp/frontend/src/components/: ModelViewer.jsx
