[project]
name = "custom-shoe-tree"
version = "0.1.0"
description = "FABRIC-581 foot-scan to custom shoe tree pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fast-simplification>=0.1.12",
    "manifold3d>=3.2.1",
    "networkx>=3.5",
    "numpy>=2",
    "pillow>=12.2.0",
    "pyglet<2",
    "rtree>=1.4.1",
    "scipy>=1.16.2",
    "shapely>=2.1.2",
    "trimesh>=4.11.5",
]

[project.scripts]
custom-shoe-tree = "custom_shoe_tree.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/custom_shoe_tree"]
